--- a/Resume/app/src/main/AndroidManifest.xml
+++ b/Resume/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Resume">
-        <activity android:name=".WorkHistoryActivity"></activity>
+        <activity android:name=".SchoolHistoryActivity"></activity>
+        <activity android:name=".WorkHistoryActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
